--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,18 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @plugin "daisyui";
 
 /* them */
 @plugin "daisyui" {
-  themes: light --default, dark --prefersdark;
+  themes:
+    light --default,
+    dark --prefersdark;
 }
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
-.dark{
+.dark {
   color: white;
+}
+
+body {
+  background: white;
 }
