complete final project

--- a/src/index.css
+++ b/src/index.css
@@ -19,19 +19,10 @@
 @plugin "daisyui/theme" {
   name: "light";
   default: true;
-  --color-primary: yellow;
+  --color-primary: green;
   --color-secondary: #03373d;
+  --color-black: #00000;
 }
-
-/* data light and dark theme */
-
-/* body {
-  background-color: var(--bg-color);
-  color: var(--text-color);
-  transition:
-    background-color 0.3s ease,
-    color 0.3s ease;
-} */
 
 .navbar {
   background-color: var(--nav-bg);
